added the hamburger button and the sign in button

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 	<body>
 		<nav class="navigation--menu">
-			<div class="hamburguer--menu">hamburguer</div>
-			<div class="logo">logo</div>
+			<div class="hamburguer--menu"><img src="img/download.png" alt="Hamburger"></div>
+			<div class="logo"> <img src="https://archive.vn/Bss88/51a3832e6af6792add876216da444db23a4bea96.png" alt=""></div>
 			<div class="search--menu">
 				<form action="#">
 					<input type="text" placeholder="search" name="search" id="search" />
