--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
 		<title>youtube clone</title>
 	</head>
 	<body>
-		<nav class="navigation--menu">
-			<div class="hamburguer--menu">hamburguer</div>
-			<div class="logo">logo</div>
-			<div class="search--menu">
-				<form action="#">
-					<input type="text" placeholder="search" name="search" id="search" />
-					<button class="search--button">🔎</button>
-				</form>
-			</div>
-			<div>upload</div>
-			<button class="sign--button">sign in</button>
-		</nav>
+		<main class="container">
+			<nav class="navigation--menu">
+				<div class="hamburguer--menu">hamburguer</div>
+				<div class="logo">logo</div>
+				<div class="search--menu">
+					<form action="#">
+						<input type="text" placeholder="search" name="search" id="search" />
+						<button class="search--button">🔎</button>
+					</form>
+				</div>
+				<div>upload</div>
+				<button class="sign--button">sign in</button>
+			</nav>
+			<div class="video--playing"></div>
+			<aside class="side--bar"></aside>
+		</main>
 	</body>
 </html>
