--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
 		<link rel="stylesheet" href="style.css" />
 		<title>youtube clone</title>
 	</head>
@@ -19,15 +23,23 @@
 			</div>
 			<div class="search--menu">
 				<form action="#">
-					<input type="text" placeholder="search" name="search" id="search" />
-					<button class="search--button">🔎</button>
+					<input
+						type="text"
+						placeholder="search"
+						name="search"
+						id="search"
+						class="search"
+					/>
+					<button class="search--button">
+						<i class="fa fa-search" style="color: #d3d3d3; font-size: 20px"></i>
+					</button>
 				</form>
 			</div>
-			<div>upload</div>
+			<i class="fa fa-upload" style="color: #808080; font-size: 30px"></i>
+			<button class="upoload--button"></button>
 			<button class="sign--button">sign in</button>
 		</nav>
 		<main class="container">
-		
 			<div class="video--playing">
 				<iframe
 					width="560"
