styled upload button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<title>youtube clone</title>
 	</head>
 	<body>
+		<h1>changed</h1>
 		<nav class="navigation--menu">
 			<div class="hamburger--menu">
 				<img src="img/download.png" alt="Hamburger" />
