added share button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<button class="sign--button">sign in</button>
 		</nav>
 		<main class="container">
-			<div class="video--playing">
+			<section class="video--playing">
 				<iframe
 					width="560"
 					height="315"
@@ -50,7 +50,24 @@
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen
 				></iframe>
-			</div>
+				<div class="video--info">
+					<h2 class="video--title">Minecraft, But We Can Only See One Chunk...</h2>
+					<div class="video--uploader"><img src="" alt=""><h3>Dream</h3>
+						<button class="video--uploader-button">subscribe</button>					
+					</div>
+
+					<div class="video--views">
+						102 
+					</div>
+					<br>
+					<div class="share--button">
+						<i class="fa fa-share" aria-hidden="true"></i>
+					</div>
+
+
+				</div>
+				
+			</section>
 			<aside class="side--bar"></aside>
 		</main>
 	</body>
