--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+			rel="stylesheet"
+		/>
+		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
@@ -51,22 +55,30 @@
 					allowfullscreen
 				></iframe>
 				<div class="video--info">
-					<h2 class="video--title">Minecraft, But We Can Only See One Chunk...</h2>
-					<div class="video--uploader"><img src="" alt=""><h3>Dream</h3>
-						<button class="video--uploader-button">subscribe</button>					
-					</div>
+					<h2 class="video--title">
+						Minecraft, But We Can Only See One Chunk...
+					</h2>
+					<div class="something">
+						<div class="video--uploader">
+							<img src="" alt="" />
+							<h3>Dream</h3>
+							<button class="video--uploader-button">subscribe</button>
+						</div>
 
-					<div class="video--views">
-						102 
+						<div class="video--views">
+							<span class="video--views-number">102</span> views
+						</div>
 					</div>
-					<br>
-					<div class="share--button">
+					<div class="another--thing">
+         <div class="share--button">
 						<i class="fa fa-share" aria-hidden="true"></i>
 					</div>
-
-
+					<div class="like--and--dislike">
+						<i class="fa fa-thumbs-up" aria-hidden="true"></i>
+						<i class="fa fa-thumbs-down" aria-hidden="true"></i>
 				</div>
-				
+					</div>
+					
 			</section>
 			<aside class="side--bar"></aside>
 		</main>
