--- a/index.html
+++ b/index.html
@@ -66,16 +66,18 @@
 						</div>
 
 						<div class="video--views">
-							<span class="video--views-number">102</span> views
+							<span class="video--views-number">5000</span> views
 						</div>
 					</div>
-					<div class="another--thing">
+					<hr>
+					<div class="anotherthing">
          <div class="share--button">
 						<i class="fa fa-share" aria-hidden="true"></i>
 					</div>
+
 					<div class="like--and--dislike">
-						<i class="fa fa-thumbs-up" aria-hidden="true"></i>
-						<i class="fa fa-thumbs-down" aria-hidden="true"></i>
+						<i class="fa fa-thumbs-up" aria-hidden="true">2000</i>
+						<i class="fa fa-thumbs-down" aria-hidden="true">100</i>
 				</div>
 					</div>
 					
