added the user icon

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 				</form>
 			</div>
 			<i class="fa fa-upload" style="color: #808080; font-size: 30px"></i>
-			<button class="upoload--button"></button>
-			<button class="sign--button">sign in</button>
+		
+			<i class="fa fa-bell" style="color: #808080; font-size: 30px"></i>
+			<i class="fa fa-user-circle" style="color: #808080; font-size: 30px"></i>
 		</nav>
 		<main class="container">
 			<section class="video--playing">
