finished styling the video playing section

--- a/index.html
+++ b/index.html
@@ -40,16 +40,14 @@
 					</button>
 				</form>
 			</div>
-			<i class="fa fa-upload" style="color: #808080; font-size: 30px"></i>
+			<i class="fa fa-upload"  aria-hidden="true"></i>
 		
-			<i class="fa fa-bell" style="color: #808080; font-size: 30px"></i>
-			<i class="fa fa-user-circle" style="color: #808080; font-size: 30px"></i>
+			<i class="fa fa-bell"  aria-hidden="true"></i>
+			<i class="fa fa-user-circle"  aria-hidden="true"></i>
 		</nav>
 		<main class="container">
 			<section class="video--playing">
 				<iframe
-					width="560"
-					height="315"
 					src="https://www.youtube.com/embed/mltj5p6l1-8"
 					frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -75,7 +73,7 @@
 					<hr>
 					<div class="anotherthing">
          <div class="share--button">
-						<i class="fa fa-share" aria-hidden="true"></i>
+						<i class="fa fa-share" aria-hidden="true"></i>SHARE
 					</div>
 
 					<div class="like--and--dislike">
@@ -85,7 +83,10 @@
 					</div>
 					
 			</section>
-			<aside class="side--bar"></aside>
+			<section class="side--bar">
+			<div class="side--video">
+			</div>
+		</section>
 		</main>
 	</body>
 </html>
