added one more item to the sidebar

--- a/index.html
+++ b/index.html
@@ -163,6 +163,17 @@
 						<p><span>5k</span> views</p>
 					</div>
 				</div>
+				<div class="side--video">
+					<img
+						src="https://images.pexels.com/photos/2802811/pexels-photo-2802811.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+						alt="a video"
+						class="side--video-thumnail"
+					/>
+					<div class="side--video-title">
+						<h3>This is a thumnail</h3>
+						<p><span>5k</span> views</p>
+					</div>
+				</div>
 			</section>
 		</main>
 	</body>
